<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main"
    android:background="#146ebd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ganch.volume_s4mini.MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33b25f">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tit_speaker"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000000" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33b25f">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/probel1"
                android:layout_weight="1"
                android:id="@+id/textView8"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_cur"
                android:id="@+id/textView2"
                android:singleLine="false"
                android:layout_column="1"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingRight="20dp"
                android:gravity="center_horizontal"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_set"
                android:id="@+id/textView3"
                android:layout_column="2"
                android:padding="2dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_vol"
                android:layout_weight="1"
                android:id="@+id/textView4"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curVolDinamic"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:text="@string/s68"
                android:textColor="#000000"
                android:layout_weight="1"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:inputType="numberDecimal"
                android:text="@string/s76"
                android:textColor="#8e1717"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_column="2" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:background="#85a347">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tit_headphone_vol"
            android:id="@+id/textView5"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textColor="#000000" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#85a347">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/probel2"
                android:id="@+id/textView6"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_cur"
                android:id="@+id/textView7"
                android:paddingRight="20dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_set"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_phone1"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curVolHead1"
                android:text="@string/s56"
                android:textColor="#000000"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/VolHead1"
                android:text="@string/s60"
                android:textColor="#8e1717"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tit_phone2"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curVolHead2"
                android:text="@string/s56"
                android:textColor="#000000"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/VolHead2"
                android:text="@string/s60"
                android:textColor="#8e1717"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewBtn"
            android:id="@+id/save_btn"
            android:onClick="onClickBtn"
            android:nestedScrollingEnabled="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewBtn"
            android:id="@+id/exit_btn"
            android:onClick="onClickBtn" />
    </LinearLayout>

</LinearLayout>




